* FF 3.6 fix for Owner/Collections display filter * course title wrap fix.

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -1051,8 +1051,6 @@ body.fluid #content
   color: #333;
   max-height: 65px;
   overflow: hidden;
-  max-width: 264px;
-  
 }
 
 #course_title a
